crates/toml_edit/tests/fixtures/invalid/string/basic-byte-escapes.stderr
TOML parse error at line 1, column 13
  |
1 | answer = "\x33"
  |             ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
